Finish ScoreCounter component, finish CardEditor component, and make sure all items in card/deck grid are in proper alignment

--- a/src/components/Deck/Deck.css
+++ b/src/components/Deck/Deck.css
@@ -36,7 +36,8 @@
 }
 
 .deck-edit-button {
-    margin-bottom: var(--spacing-extra-small);
+    margin-bottom: var(--spacing-small);
+    margin-top: var(--spacing-medium);
     cursor: pointer;
     align-self: end;
     justify-self: center;
