--- a/src/tachyons-styles.css
+++ b/src/tachyons-styles.css
@@ -44,6 +44,10 @@ body {
         font-size: 1.25rem;
     }
 
+    .f5-ns {
+        font-size: 1rem;
+    }
+
 }
 
 .w-100 {
